src/components/Nav/Nav.css
.nav {
  /* flex box layout */
  display: flex;
  justify-content: space-between;
  align-items: center;

  margin: 0 0 20px;
  background-color: #20b000;
  overflow: hidden;
}

.nav a {
  text-decoration: none;
}

.nav-title {
  font-size: 24px;
  font-weight: 700;
  color: #000000;
  padding-left: 10px;
  margin: 0;
}

.navLink {
  display: inline-block;
  color: #000000;
  background-color: #20b000;
  text-align: center;
  padding: 20px 10px;
  text-decoration: none;
  font-size: 12px;

  /* these last two make the logout button in
  the nav bar look like another link */
  border: none;
  cursor: pointer;
  outline: 0;
}

.navLink:hover {
  background-color: #20b000;
}

